Created functionality for opening highlighted urls

--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,22 @@
 {
-  "name": "Note Taker App Starter",
-  "version": "0.0.1",
-  "description": "Take Notes on web pages!",
-  "manifest_version": 2,
+  "name": "You Are Elevated",
+  "version": "1.0",
+  "description": "Extension that elevates your URL opening experience.",
   "background": {
     "scripts": ["background.js"],
-    "persistest": false
+    "persistent": false
   },
   "page_action": {
     "default_popup": "/popup/popup.html"
   },
-  "permissions": ["tabs", "activeTab", "declarativeContent", "storage"],
+  "permissions": ["tabs", "activeTab", "declarativeContent", "storage", "<all_urls>", "contextMenus"],
   "content_scripts": [
     {
       "matches":["<all_urls>"], 
-      "js": ["notes.js"],
-      "css": ["notes.css"]
+      "js": ["selection.js"],
+      "run_at": "document_start",
+      "all_frames": true
     }
-  ]
+  ],
+  "manifest_version": 2
 }
